--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,13 +1,11 @@
+@import './assets/normalize.css';
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background: linear-gradient(0deg,#fff,#d7e1ec 74%);
+    color: #2D2E46;
+    font-size: 16px;
+    line-height: 24px;
+    min-height: 100vh;
+    font-weight: 400;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
