--- a/app/src/components/Header/Header.module.css
+++ b/app/src/components/Header/Header.module.css
@@ -1,5 +1,4 @@
 .header {
-    background-color: #282c34;
     color: white;
     padding: 20px;
 }
@@ -14,4 +13,11 @@
 .logo{
     display: block;
 }
-.registrGroup{}
+.registrGroup{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.btn{
+    margin-right: 20px;
+}
