--- a/app/src/components/Header/Header.module.css
+++ b/app/src/components/Header/Header.module.css
@@ -1,6 +1,17 @@
 .header {
     color: white;
     padding: 20px;
+    position: fixed;
+}
+
+.dark {
+    background: linear-gradient(rgb(5 5 7 / 93%), #554a79);
+    transition: 0.3s all;
+}
+
+.light {
+    background: linear-gradient(#36b6c2, #c391e5);
+    transition: 0.3s all;
 }
 
 .navigation {
@@ -9,15 +20,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 20px;
 }
-.logo{
-    display: block;
-}
-.registrGroup{
+
+.registerGroup {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.btn{
-    margin: 20px;
+
+.btn {
+    margin: 0 20px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    color: white;
+    transition: 1s;
+}
+.logo:hover{
+    transform: scale(1.3);
+}
+.logo img{
+    width: 30px;
+    height: 30px;
+}
+.logo span{
+    margin-left: 5px;
 }
