--- a/app/src/components/Header/Header.module.css
+++ b/app/src/components/Header/Header.module.css
@@ -1,7 +1,13 @@
 .header {
-    color: white;
-    padding: 20px;
+    position: relative;
+    height: 80px;
+}
+
+nav {
     position: fixed;
+    width: 100%;
+    height: 80px;
+    z-index: 5;
 }
 
 .dark {
@@ -16,11 +22,11 @@
 
 .navigation {
     margin: 0 auto;
-    max-width: 1280px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 0 20px;
 }
 
 .registerGroup {
@@ -39,13 +45,44 @@
     color: white;
     transition: 1s;
 }
-.logo:hover{
+
+.logo:hover {
     transform: scale(1.3);
 }
-.logo img{
+
+.logo img {
     width: 30px;
     height: 30px;
 }
-.logo span{
+
+.logo span {
     margin-left: 5px;
+}
+
+@media (max-width: 560px) {
+
+    .navigation {
+        position: fixed;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        /*right: 0;*/
+        left: -100%;
+        width: 50%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, .8);
+        transition: 0.6s all
+    }
+
+    .active {
+        left: 0;
+    }
+
+    .registerGroup {
+        margin-top: 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
