--- a/app/src/components/Header/Header.module.css
+++ b/app/src/components/Header/Header.module.css
@@ -1,8 +1,6 @@
-.header {
-    position: relative;
-    height: 80px;
+header{
+    padding-bottom: 100px;
 }
-
 nav {
     position: fixed;
     width: 100%;
@@ -85,4 +83,5 @@ nav {
         justify-content: center;
         align-items: center;
     }
+
 }
