feat: add section Tools

--- a/app/src/pages/home/section BestTracker/BestTracker.module.css
+++ b/app/src/pages/home/section BestTracker/BestTracker.module.css
@@ -5,7 +5,7 @@
 
 .inner {
     padding: 133px 0 80px;
-    background-image: url("../../../assets/image/home/top-bg.svg");
+    background-image: url("../../../assets/image/home/best tracker/top-bg.svg");
     background-repeat: no-repeat;
     background-position: bottom right;
     text-align: left;
@@ -58,7 +58,7 @@
     top: 2px;
     width: 17px;
     height: 19px;
-    background-image: url("../../../assets/image/home/top-bg.svg");
+    background-image: url("../../../assets/image/home/best tracker/top-bg.svg");
 }
 
 .btn,.btn2 {
