--- a/app/src/index.css
+++ b/app/src/index.css
@@ -7,8 +7,9 @@ body {
     line-height: 24px;
     min-height: 100vh;
     font-weight: 400;
+    font-family: "Poppins", sans-serif;
 }
 .container{
-    max-width: 1280px;
+    max-width: 1180px;
     margin: 0 auto;
 }
