feat: add form for SingUp and change style for project

--- a/app/src/components/Footer/Footer.css
+++ b/app/src/components/Footer/Footer.css
@@ -5,12 +5,16 @@
 .inner{
     margin: 0 auto;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
 .inner a{
     display: block;
-    margin: 0 auto;
     padding: 25px;
     color: #282c34;
     font-weight: 600;
     font-size: 24px;
+}
+.Logo{
+    width: 75px;
 }
