--- a/app/src/pages/home/section BestTracker/BestTracker.module.css
+++ b/app/src/pages/home/section BestTracker/BestTracker.module.css
@@ -29,6 +29,12 @@
     max-width: 460px;
 
 }
+.btn2{
+    width: 160px;
+}
+.btn{
+    width: 115px;
+}
 .btn,.btn2 {
     padding: 10px 25px;
     font-size: 20px;
@@ -72,4 +78,40 @@
 .hoverInShadow:hover:after,
 .hoverInShadow2:hover:after{
     box-shadow:  inset 3px 3px 3px #d0d0d0, inset -3px -3px 3px #f8f8f8;;
+}
+
+@media(max-width: 980px){
+    /*.btn,.btn2{*/
+    /*    display: block;*/
+    /*    margin: 25px*/
+    /*}*/
+    .directionItemImg{
+        width: 400px;
+    }
+    .title{
+        font-size: 34px;
+    }
+}
+@media(max-width: 780px){
+    .buttons{
+        display: flex;
+        margin: 20px auto;
+    }
+    .title{
+        font-size: 26px;
+    }
+    .text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .wrapper{
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+}
+@media(max-width: 450px){
+    .text {
+       display: none;
+    }
 }
