--- a/app/src/components/Footer/Footer.css
+++ b/app/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
     text-align: center;
     display: flex;
     justify-content: space-between;
+    padding: 10px;
 }
 .inner a{
     display: block;
