--- a/app/src/pages/home/section Blog/Blog.css
+++ b/app/src/pages/home/section Blog/Blog.css
@@ -1,5 +1,5 @@
 .blog {
-    padding: 30px 0 120px;
+    padding: 30px 10px 120px;
 }
 
 .blogTitle {
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1180px;
     margin-top: 100px;
 }
 
@@ -29,6 +30,7 @@
 .item {
     padding: 0 20px;
 }
+
 .itemInfo:hover {
     border: 2px solid #63a4dc;
     box-shadow: 2px 2px 9px rgba(0, 0, 0, .25);
@@ -79,11 +81,30 @@
     width: 50px;
     height: 50px;
 }
-.inner{
+
+.inner {
     display: flex;
     align-items: center;
     margin-left: 20px;
 }
-.inner span{
+
+.inner span {
     margin-right: 20px;
+}
+
+@media (max-width: 1290px) {
+    .blogWrapper {
+        flex-wrap: wrap;
+    }
+}
+@media (max-width: 795px) {
+    .blogWrapper {
+        flex-direction: column;
+
+    }
+}
+@media (max-width: 410px) {
+   .itemImg{
+       width: 265px;
+   }
 }
